folders created for files

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Yousuf Afroze</title>
-  <link rel="stylesheet" href="Portfolio.css">
+  <link rel="stylesheet" href="///Users/Yousuf/Desktop/portfolio/css/Portfolio.css">
 
 
   <!-- Add icon library -->
@@ -154,11 +154,11 @@
   </div>
 
   <div id = "footer" class="section section section-dark table_div">
-    <a href="https://www.linkedin.com/in/shahzebafroze/"><i class="fa fa-linkedin-square" style="font-size: 50px"></i></a>
+    <a href="https://www.linkedin.com/in/yousuf-afroze/"><i class="fa fa-linkedin-square" style="font-size: 50px"></i></a>
 
-    <a href="https://github.com/s3afroze"><i class="fa fa-github" style="font-size: 50px"></i></a>
+    <a href="https://github.com/yousufafroze"><i class="fa fa-github" style="font-size: 50px"></i></a>
 
-    <a href="mailto:safroze20@schulich.yorku.ca"><i class="fas fa-envelope" style="font-size: 40px"></i></a>
+    <a href="mailto:yafroze@edu.uwaterloo.ca"><i class="fas fa-envelope" style="font-size: 40px"></i></a>
 </div>
 <!-- Animation JS -->
 <script
@@ -167,6 +167,6 @@
   crossorigin="anonymous"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js'></script>
 
-    <script  src="Portfolio.js"></script>
+    <script  src="///Users/Yousuf/Desktop/portfolio/js/Portfolio.js"></script>
 </body>
 </html>
