--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Yousuf Afroze</title>
-  <link rel="stylesheet" href="///Users/Yousuf/Desktop/portfolio/css/Portfolio.css">
+  <link rel="stylesheet" href="Portfolio.css">
 
 
   <!-- Add icon library -->
@@ -167,6 +167,6 @@
   crossorigin="anonymous"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js'></script>
 
-    <script  src="///Users/Yousuf/Desktop/portfolio/js/Portfolio.js"></script>
+    <script  src="Portfolio.js"></script>
 </body>
 </html>
