--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h1>Who Am I ?</h1>
 
     <p>
-      My name is Yousuf Afroze. bruhhh
+      My name is Yousuf Afroze.
       I am a full-time student and part-time dreamer. But most of all, I am a chronic learner. I have not only excelled at my  school but continued with my passion for programming at the same time.
       <br>
       <br>
