--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <p class="skill-name"><i class="fab fa-python"></i> Python</p>
     <p class="skill-name"><i class="fab fa-cuttlefish"></i> C</p>
     <p class="skill-name"><i class="fas fa-plus"></i> C++ </p>
-    <p class="skill-name"><i class="fa fa-picture-o" aria-hidden="true"></i> Front-End (HTML, CSS, JS)</p>
+    <p class="skill-name"><i class="fa fa-picture-o" aria-hidden="true"></i> Front-End (Angular, JS, HTML, CSS)</p>
     <h2>Work Experiences</h2>
     
     <p><i class="fas fa-briefcase"></i> Co-Founder at Algo Consulting </p>
