--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
      <br>
 
-    <h2><a href="https://yousufafroze.github.io/Portfolio/">Static portfolio website <i class="far fa-smile-beam"></i></a></h2>
+    <h2><a href="https://yousufafroze.github.io/Portfolio/">Portfolio website <i class="fas fa-book-open"></i></a></h2>
     <h3>
       Portfolio
     </h3>
