--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       I am a full-time student and part-time dreamer. But most of all, I am a chronic learner. I have not only excelled at my school but continued with my passion for programming at the same time.
       <br>
       <br>
-      When I'm not in class at the University of Waterloo. I can be found taking online courses, gym at night or trying out competitive programming.
+      When I'm not in class at the University of Waterloo, I can be found taking online courses, gym at night or trying out competitive programming.
       <br>
       <br>
       I’m a learner by paying attention to detail. I started off as a software developer at AK Investments before starting university. Through that I got inspired to do my Market Anomaly Detector project using langauges like Python, HTML, CSS. I recently finished off a project on using Voting Classifiers to predict Fortune 500 stock's buy/sell/hold status leveraging all the Fortune 500 correlation in stock prices.
