--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       I am a student at University of Waterloo in Computer Science.
       <br>
       <br>
-      I recently finished off a project on using Voting Classifiers to predict a Fortune 500 stock's buy/sell/hold status leveraging other Fortune 500 stock's prices correlation. Check it out on my projects below!
+      I just did a project on Voting Classifiers to predict a Fortune 500 stock's status. Check out my projects below!
     </p>
   </section>
 
