--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       I am a student at University of Waterloo in Computer Science.
       <br>
       <br>
-      I just did a project on Voting Classifiers to predict a Fortune 500 stock's status. Check out my projects below!
+      I just did a project on Voting Classifiers to predict Fortune 500 stock's status. Check out my projects below!
     </p>
   </section>
 
