--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
 
     <p>
       My name is Yousuf Afroze.
-      I am a student at University of Waterloo in Computer Science.
+      I am a student at <b>University of Waterloo<b> in <b>Computer Science<b>. 
       <br>
+      <i>I just finished off a project on Voting Classifiers to <b>predict Fortune 500<b> stock's status.<i>
       <br>
-      I just did a project on Voting Classifiers to predict Fortune 500 stock's status. Check out my projects below!
+      Check out my Projects and Past Internships below!
     </p>
   </section>
 
