--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
       My name is Yousuf Afroze.
       I am a student at <b>University of Waterloo<b> in <b>Computer Science<b>. 
       <br>
-      <i>I just finished off a project on Voting Classifiers to <b>predict Fortune 500<b> stock's status.<i>
+      I just finished off a project on Voting Classifiers to <b>predict Fortune 500<b> stock's status.
+      <br>
       <br>
       Check out my Projects and Past Internships below!
     </p>
