--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <p class="skill-name"><i class="fab fa-cuttlefish"></i> C</p>
     <p class="skill-name"><i class="fas fa-plus"></i> C++ </p>
     <p class="skill-name"><i class="fas fa-brain"></i>TensorFlow, Keras, Scikit-learn </p>
-    <p class="skill-name"><i class="fa fa-picture-o" aria-hidden="true"></i> Front-End (Angular, JS, HTML, CSS)</p>
+    <p class="skill-name"><i class="fa fa-picture-o" aria-hidden="true"></i> Front-End (Angular, JS)</p>
     
     
     <h2>Work Experiences</h2>
