--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
     <p>
       My name is Yousuf Afroze.
-      I am a student at <strong>University of Waterloo<strong> in <strong>Computer Science<strong>. 
+      I am a student at <strong>University of Waterloo</strong> in <strong>Computer Science</strong>. 
     <p>
     <p>
-      I just finished off a project on Voting Classifiers to <strong>predict Fortune 500<strong> stock's status.
+      I just finished off a project on Voting Classifiers to <strong>predict Fortune 500</strong> stock's status.
       <br>
       <br>
       Check out my Projects and Past Internships below!
