--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
     <p><i class="fas fa-briefcase"></i> Software Developer at AK Industries</p>
     
   </div>
-
+<!-- 
   <div class="parallax-img3">
     <div class="ptext">
       
     </div>
-  </div>
+  </div> -->
 
   <div class="section section section-dark">
     <h1>Projects</h1>
