--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <p>
       My name is Yousuf Afroze.
       I am a student at <strong>University of Waterloo</strong> in <strong>Computer Science</strong>. I've extensive experience 
-      with Python, C and C++ and Angular.
+      with Python, C, C++ and Angular.
       <br>
       <strong>Currently, seeking Fall 2020 Internship</strong>.
     <p>
