--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       I am a student at <strong>University of Waterloo</strong> in <strong>Computer Science</strong>. I've extensive experience 
       with Python, C, C++ and Angular.
       <br>
-      <strong>Currently, seeking Fall 2020 Internship</strong>.
+      <strong>I'm currently looking for Fall 2020 Internship</strong>.
     <p>
     <br>
     
